frontend and a bit backend

--- a/gladiatorFrontend/gladiatorAngular/src/app/aboutus/aboutus.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/aboutus/aboutus.component.html
@@ -1,26 +1,64 @@
-<html>
-    <body>
-        <H1>About Us</H1>
+<div >
+  <div class=container1>
 
-        <div>
-            <h2>Mission</h2>
-            <p>
-                Schemes for Farmer
+    <img src="FarmerwelcomeBGI.jpg" style="float: right; width: 40%;height:100%; margin-right: 5%; margin-bottom: 0.5em;" >
+<br>
+            <h2 style=" width: 40%;height:100%; margin-right: 1%; margin-left:5%;">
+                <h1 style="color:green;font-size: 40px;margin-top:10%;">Farmers:</h1>
+                Farmers can sell their crops here by placing the crop in the market place.
+                They can choose the base price for the product.
+                They are the one who decides the base price.
+                They can easily find the best bid in this platform
+                <br><br>
+                <h1 style="color:green;font-size: 40px;">Bidders:</h1>
+                Bidders can buy the crops and seeds that are in the auction.
+                They have to win the bid and own the crop.
+                They can achieve the profits here according to the market current product values.
+
+        </h2>
+       </div>
+       <br><br> <br><br> <br><br>
+       <div class=container2>
+           
+            <h2 style="margin-right:5%;float:left;margin-left:5%;">
+                
+                <h1 style="color:green;font-size:35px;margin-left: 1%;">
+                    Awareness on Government <br><br>Schemes</h1> <br>
                 The Government of India provides various schemes for farmers, but due to lack
                 of awareness and miscommunication, farmers do not avail these benefits. Hence,
                 we try to integrate some of the schemes like Fasal Bima Yojna and Bidding of
-                Crops scheme.
+                Crops scheme.<br><br>
                 We are implementing a system which is automated and helps to reduce the
                 burden on farmers as well as the system. We are providing an online means to
                 apply and claim insurance which will help the system to work efficiently and
-                enhance smooth handling of records.
+                enhance smooth handling of records.<br><br>
                 The bidding module will enable the farmer to place crops for auction and receive
                 best price from auction which stabilizes the farmer’s income as well as eliminates
                 the stress of physical sale of crops in the market. We have implemented two
                 modules which will help the farmer to make use of technology and reduce the
-                efforts for selling the crops.
-            </p>
+                efforts for selling the crops. <br> <br>
+            </h2>
         </div>
-    </body>    
-
-</html>    
+        <br><br> <br>      
+         <div>
+            <br><br> <br>
+                <h1 style="color:green;font-size:35px;margin-left:7%;">Faisal Bhima Yojna <br><br>Schemes</h1>
+                <br><br>
+                <h2 style="width:90%;height:100%;margin-right:5%;float:left;margin-left:5%;">
+                To provide insurance coverage and financial support to the farmers in the
+          event of failure of any of the notified crop because of natural calamities,
+           pests & diseases.<br>
+              To stabilize the income of farmers to ensure their continuance in farming.<br><br>
+               There will be a uniform premium of only 2% to be paid by farmers for all
+Kharif crops and 1.5% for all Rabi crops. In case of annual commercial and
+horticultural crops, the premium to be paid by farmers will be only 5%. 
+<br><br>
+The
+premium rates to be paid by farmers are very low and balance premium will
+be paid by the Government to provide full insured amount to the farmers
+against crop loss on account of natural calamities.
+</h2>
+</div>
+       
+    </div>
+    <br><br> <br>
