--- a/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/admin-user-approvals/admin-user-approvals.component.html
@@ -25,8 +25,8 @@
     <td>{{i.email}}</td>
     <td>{{i.contactno}}</td>
     
-    <td><a><button class="btn btn-success btn-lg" (click)="onAccept(i.UID)" >Approve</button></a></td>
-    <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.UID)" >Reject</button></a></td>
+    <td><a><button class="btn btn-success btn-lg" (click)="onView(i.UID)" >View All Details</button></a></td>
+    <!-- <td><a><button class="btn btn-danger btn-lg" (click)="onReject(i.UID)" >Reject</button></a></td> -->
     
 
 </tr>
