--- a/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/adminwelcome/adminwelcome.component.html
@@ -37,6 +37,10 @@
               id="right" style="color:rgb(105, 20, 218)"> 
           Bid Requests 
       </button> 
+      <button class="btn" (click)="SellCrop()"
+              id="right" style="color:rgb(105, 20, 218)"> 
+          Market Place
+      </button> 
       </div>
   </div> 
 </div> 
