--- a/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/farmer-welcome/farmer-welcome.component.html
@@ -7,7 +7,13 @@
     <div class="card">
       <!-- <img src="../assets/images/card5.jpg" alt="farmers auction" style="width:100%"> -->
       
-      <p><button type="button"  color="primary" mat-raised-button (click)="goToAuction()">Place Aution Request</button></p>
+      <p><button type="button" mat-raised-button (click)="goToAuction()">Place Sell Request</button></p>
+      <p class="card-body">
+        <br><br>
+        Want to sell your crop?<br><br>
+         Place a request!!
+       
+      </p>
     </div>
     </div>
   
@@ -16,7 +22,13 @@
    <div class="card">
       <!-- <img src="../assets/images/finalcard.png" alt="farmers auction" style="width:100%"> -->
       
-      <p><button type="button"  color="primary" mat-raised-button (click)="goToSoldHistory()">Sold History</button></p>
+      <p><button type="button"  mat-raised-button (click)="goToSoldHistory()">Sold History</button></p>
+      <p class="card-body">
+        <br>
+        Checkout your sold <br><br>crops
+         
+       
+      </p>
     </div>
     </div>
   
@@ -25,7 +37,13 @@
     <div class="card">
       <!-- <img src="../assets/images/finalcard2.png" alt="farmers auction" style="width:100%"> -->
       
-      <p><button type="button"  color="primary" mat-raised-button (click)="goToMarketplace()">View Marketplace</button></p>
+      <p><button type="button"  mat-raised-button (click)="goToMarketplace()">View Marketplace</button></p>
+      <p class="card-body">
+        <br>
+        Check yur crop's<br><br>Bid status<br>
+         
+       
+      </p>
     </div> 
      </div>
   
