--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.css
@@ -80,6 +80,7 @@
     background-image: url("src/assets/images/LoginBGI.jpg");
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
+    height:100%;
 }
 #login {
 	width: 100px;
