--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login-bidder/login-bidder.component.html
@@ -63,7 +63,7 @@
                          <a routerLink="/forgotcustomerid" style="color:red" routerLink="/forgotpassword">Forgot Password?</a> &nbsp; &nbsp;&nbsp;
                         <br><br>
                         <div>
-                            Not Registerd?<a routerLink="/farmerregister">  Signup Here</a>
+                            Not Registerd?<a routerLink="/bidderregister">  Signup Here</a>
                         </div> 
                         
                         <!-- <div class="error" *ngIf="invalidLogin">
