--- a/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/login/login.component.html
@@ -5,13 +5,13 @@
         <!-- LOGIN FORM -->
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-4 container justify-content-center">
-                <h1 class="text-center login-title text-white font-weight-bold"><p>Hello Admin!</p>
+                <h1 class="text-center login-title text-white font-weight-bold" style="color:green">
+                    Hello Admin!!<br>
                     Please Enter login details
                 </h1>
                 <div class="account-wall">
-                    <!-- ICON FOR LOGIN FORM -->
-                    <!-- <div margin=""></div>
-                    <mat-icon>person</mat-icon> -->
+                    
+                    <mat-icon>eco</mat-icon> 
                     
                 
                     <form [formGroup]="loginForm" (ngSubmit)="doLogin()" class="form-signin">
