--- a/gladiatorFrontend/gladiatorAngular/src/app/app.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/app.component.css
@@ -1,10 +1,12 @@
 .navbar{
-  background:rgb(4, 133, 4)
+  
+  background:rgb(4, 133, 4);
+
 }
 
 .header
 {
-  height: 8em;
+  height:17%;
   display: flex;
   align-items: center;
   color: white;
@@ -12,6 +14,7 @@
   background: rgb(24, 119, 24);
   min-width: 600px;
   min-height: 60px;
+
 }
 
 .logo
