--- a/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/bidder-welcome/bidder-welcome.component.css
@@ -1,24 +1,26 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+  background-color: rgba(169, 164, 172, 0.712);
+    background-color: inherit;
+    width:500px;
     height: 450px;
     margin: auto;
     text-align: center;
     font-family: arial;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
   }
-  
-
-  
   .card button {
+    border-radius: 5px;
     border: none;
     outline: 0;
     padding: 12px;
     color: white;
-    background-color: #000;
+    background-color:green;
     text-align: center;
     cursor: pointer;
     width: 100%;
     font-size: 18px;
+    height:50%;
   }
   
   .card button:hover {
@@ -41,8 +43,9 @@
   }
 
   .bg{
+    height:100%;
     background-position: center;
-    /* background-image: url("src/assets/images/bidderbg.jpg"); */
+    background-image: url("src/assets/images/Bidderwelcome.jpg"); 
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
   }
