--- a/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.css
@@ -12,7 +12,7 @@
 
 } */
 .homebgpic{
-    width:cover;
+    height:100%;
     background-position: center;
     background-image: url("src/assets/images/HomeBGI (2).jpg");
     background-repeat: no-repeat; /* Do not repeat the image */
@@ -22,7 +22,7 @@
   {
     display: flex;
     flex-direction: column;
-    margin: 3% 18% 8%;
+    margin: 0.005% 18% 8%;
     align-self: center;
     padding: 3% 3%;
     background: rgba(0,0,0,0.4);
@@ -60,6 +60,22 @@
     line-height: 20px;
     display: inline-block;
     margin: 20px;
+    cursor: pointer;
+  }
+  .learnmore1
+  {
+    color: rgb(8, 136, 27);
+    font-family: "Noto Sans Glagolitic";
+    border-radius: 20px;
+    background-color:white;
+    align-items: center;
+    width: 500px;
+    padding: 10px 13px;
+    font-size: 25px;
+    line-height: 20px;
+    display: inline-block;
+    margin: 20px;
+  
   }
   
   .about-card
@@ -76,7 +92,7 @@
   
   .about-content
   {
-    margin: 0 3em;
+    margin: 01em 3em;
     font-size: 1.1em;
     color: dimgrey;
     font-family: "Noto Sans Glagolitic";
