--- a/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.html
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/home/home.component.html
@@ -1,15 +1,18 @@
 <div class="homebgpic">
     <div class="content">
+  <br><br>
       <div class="title">
         Welcome. Farmers and Bidders!
       </div>
+      <br><br>
       <div style="align-content: center">
-          <a routerLink='/about' style="color: inherit; text-decoration: none; display: block; height: 100%">
-            <div class="learnmore">
-              About us!
-            </div>
-          </a>
-      </div>
+        <a routerLink='/abt' style="color: white; text-decoration: none; display: block; height: 100%">
+          <div class="learnmore1">
+            We Provide you
+          </div>
+        </a>
+       
+    </div>
       <div>
       <div class="about-card">
         <div>
@@ -33,10 +36,12 @@
           <b style="color: black">Timely payments</b><br><br>
           Have faith. We care about our customers. Your money always be credited to you on time.
         </p>
-      </div>
+      </div>   
+      <a class="learnmore" routerLink="/src/app/about">About Us</a> 
     </div>
     </div>
   </div>
+
   <!--<div style="height: 2000px; width: 100%; background-color: cadetblue">-->
   
   <!--</div>-->
