--- a/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/components/sold-history/sold-history.component.css
@@ -10,3 +10,48 @@
     border-radius: 4px;
     margin-left:50%;
 }
+.bgpic{
+    background-position: center;
+    background-image: url("src/assets/images/FarmerwelcomeBGI.jpg");
+   background-repeat: no-repeat; /* Do not repeat the image */
+   background-size: cover; /* Resize the background image to cover the entire container */
+   height:120%;
+   filter: blur(8px);
+    -webkit-filter: blur(8px);
+   
+  }
+  .button1{
+    margin-left: 450px;
+    text-align:center;
+  }
+  .form1{
+    margin-top: 100px;
+  }
+  .background{
+      /* background-color:rgb(193, 241, 193); */
+      
+      /* padding:7px;
+      width:70%;
+      margin-left: 15%;
+     margin-top:3%;
+      align-content: center;
+      text-align: center;
+      border-radius: 15px;
+      font-size:large; */
+      background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: normal;
+    font-size: 20px;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    margin-top: 0.0000005px;
+ 
+    
+    }
