--- a/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.css
+++ b/gladiatorFrontend/gladiatorAngular/src/app/contactus/contactus.component.css
@@ -2,34 +2,53 @@
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    
   }
   
   body {
-    background: linear-gradient(to right, #10a123 0%, #7ccc68 100%);
+    background: linear-gradient(to right, rgb(128, 128, 182) 0%, rgb(168, 168, 182) 100%);
     font-size: 12px;
+    margin-top:10%;
+
   }
   
   body, button, input {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
     letter-spacing: 1.4px;
+    
   }
   
   .background {
     display: flex;
     min-height: 100vh;
+    background-color:rgb(245, 247, 246);
+    
   }
   
   .container {
-    flex: 0 1 700px;
-    margin: auto;
+    flex: 1 1 700px;
+   margin-left: 250px;
+   margin-top: 250px;
     padding: 10px;
+    width:50%;
+    margin-top:10%;
   }
-  
+
+ 
+  .bgpic{
+    background-position: center;
+    background-image: url("src/assets/images/LoginBGI.jpg");
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+    height:100%;
+}
   .screen {
-    position: relative;
-    background: #82dd19;
+    position: absolute;
+    background: #bfc7c1;
     border-radius: 15px;
+    width:50%;
+    margin:auto;
   }
   
   .screen:after {
@@ -52,6 +71,7 @@
     background: #4d4d4f;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
+   
   }
   
   .screen-header-left {
@@ -89,6 +109,7 @@
     margin-left: 2px;
     border-radius: 8px;
     background: #999;
+    margin-top:10%;
   }
   
   .screen-body {
@@ -126,8 +147,8 @@
   
   .app-contact {
     margin-top: auto;
-    font-size: 8px;
-    color: #888;
+    font-size: 15px;
+    color: rgb(5, 5, 5);
   }
   
   .app-form-group {
